--- a/Controls/AccountsListViewControl.xaml
+++ b/Controls/AccountsListViewControl.xaml
@@ -18,6 +18,7 @@
     <UserControl.Resources>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
+        <converters:ValueFormatConverter x:Key="ValueFormatConverter"/>
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
             <Setter Property="MinHeight" Value="10"/>
@@ -93,7 +94,7 @@
                                             <RelativePanel>
                                                 <TextBlock Name="txtValue" 
                                                     Text="{Binding TotalValue, 
-                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        Converter={StaticResource ValueFormatConverter}, 
                                                         ConverterParameter='{}$ {0:N0}'}" 
                                                     FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="Wrap" TextAlignment="Right" />
                                             </RelativePanel>
