--- a/Controls/AssetsListViewControl.xaml
+++ b/Controls/AssetsListViewControl.xaml
@@ -24,11 +24,12 @@
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <converters:BoolToCommandConverter x:Key="BoolToCommandConverter"/>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
+        <converters:ValueFormatConverter x:Key="ValueFormatConverter"/>
         <converters:FontSizeToImageSizeConverter x:Key="FontSizeToImageSizeConverter"/>
         <converters:FormatUriConverter x:Key="FormatUriConverter"/>
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
-            <Setter Property="MinHeight" Value="25"/>
+            <Setter Property="MinHeight" Value="0"/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="VerticalContentAlignment" Value="Stretch"/>
@@ -76,7 +77,7 @@
                 x:Name="HideZeroBalances"
                 l:Uids.Uid="AssetsLV_HideZeroBalances" x:FieldModifier="public" FontSize="12" FontStyle="Normal" 
                 Margin="15,0,0,0" VerticalAlignment="Bottom" VerticalContentAlignment="Center"
-                IsChecked="{Binding IsHidingZeroBalances, Mode=TwoWay}" 
+                IsChecked="{Binding _assetService.IsHidingZeroBalances, Mode=TwoWay}" 
                 Command="{Binding HideZeroBalancesCommand}" 
                 CommandParameter="{Binding Path=IsChecked, RelativeSource={RelativeSource Self}}"/>
         </StackPanel>
@@ -270,7 +271,7 @@
                                     <Border Grid.Column="2"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch">
                                         <RelativePanel HorizontalAlignment="Right">
                                                 <TextBlock Name="txtQty"  Text="{Binding Qty, 
-                                                    Converter={StaticResource StringFormatConverter}, 
+                                                    Converter={StaticResource ValueFormatConverter}, 
                                                     ConverterParameter='{}{0:0.########}'}" 
                                                     FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" />
                                                 <TextBlock Name="txtSymbol" Text="{Binding Coin.Symbol}" RelativePanel.RightOf="txtQty" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="5,0,0,0"/>
@@ -296,7 +297,7 @@
                                         <RelativePanel HorizontalAlignment="Right">
                                                 <TextBlock Name="txtMarketValue" 
                                                     Text="{Binding MarketValue, 
-                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        Converter={StaticResource ValueFormatConverter}, 
                                                         ConverterParameter='{}$ {0:N0}'}" 
                                                     FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
                                                 <TextBlock Name="txtPrice" 
@@ -310,7 +311,7 @@
                                         <RelativePanel HorizontalAlignment="Right" >
                                                 <TextBlock Name="txtCostBase"  
                                                     Text="{Binding CostBase, 
-                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        Converter={StaticResource ValueFormatConverter}, 
                                                         ConverterParameter='{}$ {0:N0}'}" 
                                                     FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
                                                 <TextBlock Name="txtAverageCostPrice" 
@@ -324,7 +325,7 @@
                                         <RelativePanel HorizontalAlignment="Right">
                                                 <TextBlock Name="txtProfitLoss" 
                                                     Text="{Binding ProfitLoss, 
-                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        Converter={StaticResource ValueFormatConverter}, 
                                                         ConverterParameter='{}$ {0:N0}'}"  
                                                     FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"  RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
                                                 <TextBlock Name="txtProfitLossPerc" 
