--- a/Views/AccountsView.xaml
+++ b/Views/AccountsView.xaml
@@ -5,6 +5,7 @@
     xmlns:models="using:CryptoPortfolioTracker.Models"
     xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
+    xmlns:helpers="using:CryptoPortfolioTracker.Helpers"
     xmlns:l="using:WinUI3Localizer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -36,6 +37,12 @@
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 <TextBlock l:Uids.Uid="Accounts_Title" x:Name="txtAccounts" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <helpers:CustomBtn Width="30" Padding="2,2,2,2" Margin="0,0,0,0" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0"
+                    Command="{Binding TogglePrivacyModeCommand}" RelativePanel.RightOf="txtAccounts" RelativePanel.AlignBottomWith="txtAccounts" 
+                    ToolTipService.ToolTip="Toggle privacy" >
+                    <FontIcon x:Name="Icon" Glyph="{Binding GlyphPrivacy}" FontWeight="Normal" Width="20" Foreground="Black"/>
+
+                </helpers:CustomBtn>
             </RelativePanel>
             <TextBlock l:Uids.Uid="Accounts_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"/>
             <Border Grid.Row="2" VerticalAlignment="Stretch" Margin="10,0,0,0">
