--- a/Views/AssetsView.xaml
+++ b/Views/AssetsView.xaml
@@ -20,6 +20,7 @@
 
     <Page.Resources>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
+        <converters:ValueFormatConverter x:Key="ValueFormatConverter"/>
         <converters:AddPrefixConverter x:Key="AddPrefixConverter"/>
         <converters:BoolToRowDefConverter x:Key="BoolToRowDefConverter"/>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
@@ -50,17 +51,23 @@
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 
                 <TextBlock l:Uids.Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <TextBlock Text="{Binding _assetService.VisibleAssetsCount, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
+                <TextBlock x:Name="txtCount" Text="{Binding _assetService.VisibleAssetsCount, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
                     Margin="0,10,0,0" 
                     Foreground="DarkGoldenrod" 
                     Style="{StaticResource SampleHeaderTextStyle}" 
                     RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtAssets" />
                 <!--Grid HorizontalAlignment="Right" Width="{Binding ElementName=HeaderGrid,Path=ActualWidth}" Margin="0,10,0,0"-->
+                <helpers:CustomBtn Width="30" Padding="2,2,2,2" Margin="0,0,0,0" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0"
+                    Command="{Binding TogglePrivacyModeCommand}" RelativePanel.RightOf="txtCount" RelativePanel.AlignBottomWith="txtCount" 
+                    ToolTipService.ToolTip="Toggle privacy" >
+                    <FontIcon x:Name="Icon" Glyph="{Binding GlyphPrivacy}" FontWeight="Normal" Width="20" Foreground="Black"/>
+
+                </helpers:CustomBtn>
             </RelativePanel>
 
             <RelativePanel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" >
                 <TextBlock x:Name="txtTotalAssetsValue" RelativePanel.AlignRightWithPanel="True"
-                    Text="{Binding _assetService.TotalAssetsValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
+                    Text="{Binding _assetService.TotalAssetsValue, Converter={StaticResource ValueFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
                     Foreground="DarkGoldenrod" 
                     Margin="0,15,20,0" 
                     Style="{StaticResource ValueHeaderTextStyle}" />
@@ -82,7 +89,7 @@
                         Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextHeaderStyle}" 
                         />
                     <TextBlock 
-                        Text="{Binding _assetService.InFlow, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
+                        Text="{Binding _assetService.InFlow, Converter={StaticResource ValueFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
                         Foreground="Goldenrod" 
                         Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextStyle}" 
                             />
@@ -99,7 +106,7 @@
                         Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextHeaderStyle}" 
                         />
                     <TextBlock
-                        Text="{Binding _assetService.OutFlow, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
+                        Text="{Binding _assetService.OutFlow, Converter={StaticResource ValueFormatConverter}, ConverterParameter='{}$ {0:N0}'}" 
                         Foreground="Goldenrod" 
                         Margin="0,0,20,0" Style="{StaticResource InAndOutFlowTextStyle}" 
                             />
