--- a/Views/DashBoardView.xaml
+++ b/Views/DashBoardView.xaml
@@ -2,18 +2,24 @@
 <Page
     x:Class="CryptoPortfolioTracker.Views.DashboardView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-xmlns:models="using:CryptoPortfolioTracker.Models"
-xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
-xmlns:converters="using:CryptoPortfolioTracker.Converters"
-xmlns:l="using:WinUI3Localizer"
-xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-xmlns:controls="using:CryptoPortfolioTracker.Controls"
- mc:Ignorable="d">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:CryptoPortfolioTracker"
+    xmlns:models="using:CryptoPortfolioTracker.Models"
+    xmlns:enums="using:CryptoPortfolioTracker.Enums"
+    xmlns:helpers="using:CryptoPortfolioTracker.Helpers"
+    xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
+    xmlns:converters="using:CryptoPortfolioTracker.Converters"
+    xmlns:l="using:WinUI3Localizer"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    d:DataContext="{d:DesignInstance Type=viewmodels:DashboardViewModel}"
+    xmlns:controls="using:CryptoPortfolioTracker.Controls" 
+    xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
+    Loading="View_Loading"
+    mc:Ignorable="d">
 
     <Page.Resources>
-        <converters:BoolToRowDefConverter x:Key="BoolToRowDefConverter"/>
+        <converters:ZoomGridDefConverter x:Key="ZoomGridDefConverter"/>
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
             <Setter Property="Height" Value="60"/>
@@ -22,165 +28,66 @@ xmlns:controls="using:CryptoPortfolioTracker.Controls"
             <Setter Property="VerticalContentAlignment" Value="Stretch"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
+
+        
+
+
     </Page.Resources>
+
+    
+    
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
-        <Grid x:Name="HeaderGrid" CornerRadius="8,8,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,5,10" VerticalAlignment="Stretch" >
+
+        <Grid x:Name="dashboardGrid" CornerRadius="8,8,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
+              Margin="0,0,5,0" VerticalAlignment="Stretch" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="250"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
+                    ConverterParameter=0.33*|HeatMap+PiePortfolio}"/>
+                <RowDefinition Height="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
+                    ConverterParameter=0.33*|Graph+PieAccounts}"/>
+                <RowDefinition Height="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
+                    ConverterParameter=0.33*|Other}"/>
             </Grid.RowDefinitions>
-            <controls:HomePageHeaderImage Grid.Row="0" Grid.RowSpan="3" Height="265" VerticalAlignment="Top"/>
-            <RelativePanel>
-                <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
+                    ConverterParameter=0.41*|HeatMap+Graph}"/>
+                <ColumnDefinition Width="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
+                    ConverterParameter=0.26*|PiePortfolio+PieAccounts}"/>
+                <ColumnDefinition Width="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
+                    ConverterParameter=0.33*|Other}"/>
+            </Grid.ColumnDefinitions>
+            
+            <controls:HomePageHeaderImage Grid.Row="0" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="3" 
+                                          Opacity="0.1" Margin="0,0,0,0" VerticalAlignment="Stretch"/>
+            <RelativePanel Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="3">
+                <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" 
+                           Margin="10,10,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBlock l:Uids.Uid="Dashboard_Title" x:Name="txtDashboard" Margin="10,5,0,0" 
+                           Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <helpers:CustomBtn  Padding="2,2,2,2" Margin="0,10,0,0" Width="30" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0" Background="Transparent"
+                    Command="{Binding TogglePrivacyModeCommand}" RelativePanel.RightOf="txtDashboard" RelativePanel.AlignBottomWith="txtDashboard" 
+                    ToolTipService.ToolTip="Toggle privacy">
+                    <FontIcon Glyph="{Binding GlyphPrivacy}" FontWeight="Normal" Width="20" />
+                </helpers:CustomBtn>
             </RelativePanel>
 
-            <StackPanel Grid.Row="1" Margin="0,0,0,0">
 
-                <Border BorderBrush="PaleGoldenrod" BorderThickness="2" Background="black" Margin="5,5,5,5" CornerRadius="10" Width="150" Height="50" ToolTipService.ToolTip="Bitcoin">
-                    <RelativePanel Margin="0,0,5,0">
-                        <TextBlock Name="Symbol" Text="WAVES"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="Bold"
-                            Margin="5,0,0,0"
-                            FontSize="32">
-                        <TextBlock.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform ScaleX="0.55" ScaleY="1"/>
-                            </TransformGroup>
-                        </TextBlock.RenderTransform>
-                        </TextBlock>
-
-                        <TextBlock Name="Value" Text="5.00 %"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="SemiBold"
-                            Margin="5,0,0,0"
-                            FontSize="18"
-                            RelativePanel.AlignRightWithPanel="True"
-                                   />
-                    
-                        <TextBlock Name="Price" Text="$ 67320"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="Normal"
-                            Margin="5,0,0,0"
-                            FontSize="14"
-                            RelativePanel.Below="Value"       
-                            RelativePanel.AlignRightWithPanel="True"       
-                                   />
-                    </RelativePanel>
-                </Border>
-
-                <Border BorderBrush="PaleGoldenrod" BorderThickness="2" Background="DarkGreen" 
-                        Margin="5,5,5,5" CornerRadius="10" Width="130" Height="60" ToolTipService.ToolTip="Bitcoin">
-                    <RelativePanel Margin="0,0,0,0" VerticalAlignment="Stretch">
-                        <TextBlock Name="Symbol1" Text="WAVES"
-                                   VerticalAlignment="Stretch"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="Bold"
-                            Margin="-5,0,0,-26"
-                            FontSize="24"
-                            RelativePanel.AlignBottomWithPanel="True">
-
-                            <TextBlock.RenderTransform>
-                                <TransformGroup>
-                                    <RotateTransform Angle="-90" CenterX="0" CenterY="0"/>
-                                    <ScaleTransform ScaleX="1" ScaleY="0.55"/>
-                                </TransformGroup>
-                            </TextBlock.RenderTransform>
-                            
-                        </TextBlock>
-
-                        <Border Name="Level1Border" Background="PaleGoldenrod"
-                                Margin="0,0,0,0"
-                                CornerRadius="0,5,0,5"
-                                RelativePanel.AlignRightWithPanel="True">
-                            <TextBlock Name="Level1" Text="Take Profit Level"
-                                Foreground="DarkGoldenrod"
-                                FontWeight="Normal"
-                                Margin="5,0,5,0"
-                                FontSize="12"
-                                RelativePanel.AlignRightWithPanel="True" />
-                        </Border>
-
-                        <TextBlock Name="Value1" Text="$ 125000"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="SemiBold"
-                            Margin="0,0,5,0"
-                            FontSize="16"
-                            RelativePanel.Below="Level1Border"
-                            RelativePanel.AlignRightWithPanel="True" />
-
-                        <TextBlock Name="Price1" Text="$ 67320"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="Normal"
-                            Margin="5,0,5,0"
-                            FontSize="12"
-                            RelativePanel.Below="Value1"       
-                            RelativePanel.AlignRightWithPanel="True" />
-                    </RelativePanel>
-                </Border>
-
-                <Border BorderBrush="PaleGoldenrod" BorderThickness="2" Background="black" Margin="5,5,5,5" CornerRadius="10" Width="155" Height="105" ToolTipService.ToolTip="Bitcoin">
-                    <RelativePanel Margin="0,0,0,0">
-                        <TextBlock Name="Symbol2" Text="WAVES"
-                           
-                            Foreground="DarkGoldenrod"
-                            FontWeight="Bold"
-                            Margin="0,0,-40,0"
-                            FontSize="32"
-                            RelativePanel.AlignRightWithPanel="True" >
-
-                            <TextBlock.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform ScaleX="0.55" ScaleY="1"/>
-                                </TransformGroup>
-                            </TextBlock.RenderTransform>
-                        </TextBlock>
-
-                        <TextBlock Name="Level2" Text="Take Profit&#x0a;Level"
-                            Foreground="DarkGoldenrod"
-                                   VerticalAlignment="Stretch"
-                            FontWeight="Normal"
-                            Margin="0,0,0,-30"
-                            FontSize="16"
-                            
-                                   RelativePanel.AlignBottomWithPanel="True">
-
-                            <TextBlock.RenderTransform>
-                                <TransformGroup>
-                                    <RotateTransform Angle="-90" CenterX="0" CenterY="0"/>
-                                    <ScaleTransform ScaleX="1.5" ScaleY="1"/>
-                                </TransformGroup>
-                            </TextBlock.RenderTransform>
-                        </TextBlock>
-
-                        <TextBlock Name="Value2" Text="$ 125000"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="SemiBold"
-                            Margin="5,0,0,0"
-                            FontSize="18"
-                            RelativePanel.Below="Symbol2"
-                            RelativePanel.AlignRightWithPanel="True"
-                                   />
-
-                        <TextBlock Name="Price2" Text="$ 67320"
-                            Foreground="DarkGoldenrod"
-                            FontWeight="Normal"
-                            Margin="5,0,0,0"
-                            FontSize="14"
-                            RelativePanel.Below="Value2"       
-                            RelativePanel.AlignRightWithPanel="True"       
-                                   />
-                    </RelativePanel>
-                </Border>
-
-
-
-
-
-
-            </StackPanel>
+            
+            <controls:HeatMapControl  x:Name="heatMap"  Grid.Row="1" Grid.Column="0" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
+            <controls:GraphControl  x:Name="GraphControl" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
+            <controls:PieChartControl x:Name="Portfolio" x:FieldModifier="public" Grid.Row="1" Grid.Column="1" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
+            <controls:PieChartControl x:Name="Accounts" x:FieldModifier="public" Grid.Row="2" Grid.Column="1" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
+            <controls:Top5Control x:Name="Top5" x:FieldModifier="public" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,10,0,0" HorizontalAlignment="Stretch" />
+            <controls:ValueGainsControl x:Name="ValueGains" x:FieldModifier="public" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" Margin="10,10,0,0" HorizontalAlignment="Stretch" />
 
 
         </Grid>
     </Grid>
+
+
+
+
+
 </Page>
