--- a/Controls/AssetAccountsGridViewControl.xaml
+++ b/Controls/AssetAccountsGridViewControl.xaml
@@ -19,6 +19,7 @@
 
     <UserControl.Resources>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
+        <converters:ValueFormatConverter x:Key="ValueFormatConverter"/>
     </UserControl.Resources>
 
 
@@ -50,7 +51,7 @@
                                 FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="NoWrap" />
                     <TextBlock Name="txtQty" 
                         Text="{Binding Qty, 
-                            Converter={StaticResource StringFormatConverter}, 
+                            Converter={StaticResource ValueFormatConverter}, 
                             ConverterParameter='{}{0:0.########}'}" 
                         TextWrapping="NoWrap" RelativePanel.Below="txtName"  
                        HorizontalAlignment="Stretch" 
